[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DynamicStateMachine"
dynamic = ["version"]
description = 'A Python library for easily implementing state machines with complex conditionals'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Copeland Carter", email = "smartycope@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["graphviz"]

[project.urls]
Documentation = "https://github.com/smartycope/DynamicStateMachine#readme"
Issues = "https://github.com/smartycope/DynamicStateMachine/issues"
Source = "https://github.com/smartycope/DynamicStateMachine"

[tool.hatch.version]
path = "src/DynamicStateMachine/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/DynamicStateMachine tests}"

[tool.coverage.run]
source_pkgs = ["DynamicStateMachine", "tests"]
branch = true
parallel = true
omit = [
  "src/DynamicStateMachine/__about__.py",
]

[tool.coverage.paths]
DynamicStateMachine = ["src/DynamicStateMachine", "*/DynamicStateMachine/src/DynamicStateMachine"]
tests = ["tests", "*/DynamicStateMachine/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
